--- a/docs/001-kvmdash.conf
+++ b/docs/001-kvmdash.conf
@@ -1,29 +1,30 @@
 <VirtualHost *:80>
     ServerName kvmdash
-   
-    # React-Frontend direkt servieren
-    Alias /frontend /var/www/kvmdash/frontend/dist
-    <Directory /var/www/kvmdash/frontend/dist>
-        Require all granted
-    </Directory>
+    DocumentRoot /var/www/kvmdash/frontend/dist
 
-    DocumentRoot /var/www/kvmdash/backend/public
-    <Directory /var/www/kvmdash/backend/public>
-        AllowOverride All
-        Require all granted
-        FallbackResource /index.php
-
-        # Authorization Header durchreichen
-        SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
-        
-        # CORS Headers
-        Header always set Access-Control-Allow-Origin "*"
-        Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-        Header always set Access-Control-Allow-Headers "Authorization, Content-Type"
-
-    </Directory>
-
-
+    # Debug Logging
+    LogLevel debug alias:trace8
     ErrorLog ${APACHE_LOG_DIR}/kvmdash_error.log
     CustomLog ${APACHE_LOG_DIR}/kvmdash_access.log combined
+
+    # Frontend
+    <Directory /var/www/kvmdash/frontend/dist>
+        Options -Indexes +FollowSymLinks
+        AllowOverride None
+        Require all granted
+        FallbackResource /index.html
+    </Directory>
+
+    # Backend API
+    AliasMatch "^/api" "/var/www/kvmdash/backend/public/index.php"
+    <Directory /var/www/kvmdash/backend/public>
+        Options FollowSymLinks
+        AllowOverride All
+        Require all granted
+
+        SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+        Header always set Access-Control-Allow-Origin "*"
+        Header always set Access-Control-Allow-Methods "GET,POST,PUT,DELETE,OPTIONS"
+        Header always set Access-Control-Allow-Headers "Authorization,Content-Type"
+    </Directory>
 </VirtualHost>
