feat(ui): enhance login page with Material-UI components
- Redesigned login form using MUI Card component
- Added logo display next to login form
- Improved input fields and submit button styling
- Made layout responsive for different screen sizes
- Enhanced error message display with MUI Alert

--- a/docs/001-kvmdash.conf
+++ b/docs/001-kvmdash.conf
@@ -7,16 +7,28 @@
     ErrorLog ${APACHE_LOG_DIR}/kvmdash_error.log
     CustomLog ${APACHE_LOG_DIR}/kvmdash_access.log combined
 
-    # Frontend
+    # Frontend ZUERST, aber mit Ausnahme für /api und /bundles
     <Directory /var/www/kvmdash/frontend/dist>
         Options -Indexes +FollowSymLinks
         AllowOverride None
         Require all granted
-        FallbackResource /index.html
+        
+        RewriteEngine On
+        # Wenn Anfrage mit /api oder /bundles beginnt, nicht weiterleiten
+        RewriteCond %{REQUEST_URI} !^/(api|bundles)
+        
+        # Wenn Datei nicht existiert, zu index.html weiterleiten
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^ index.html [L]
     </Directory>
 
-    # Backend API
+    # Backend API 
     AliasMatch "^/api" "/var/www/kvmdash/backend/public/index.php"
+    
+    # API Platform Assets
+    Alias "/bundles" "/var/www/kvmdash/backend/public/bundles"
+    
+    # Backend Verzeichnisse
     <Directory /var/www/kvmdash/backend/public>
         Options FollowSymLinks
         AllowOverride All
@@ -26,5 +38,11 @@
         Header always set Access-Control-Allow-Origin "*"
         Header always set Access-Control-Allow-Methods "GET,POST,PUT,DELETE,OPTIONS"
         Header always set Access-Control-Allow-Headers "Authorization,Content-Type"
+    </Directory>
+
+    <Directory /var/www/kvmdash/backend/public/bundles>
+        Options -Indexes +FollowSymLinks
+        AllowOverride None
+        Require all granted
     </Directory>
 </VirtualHost>
