--- a/docs/001-kvmdash.conf
+++ b/docs/001-kvmdash.conf
@@ -6,17 +6,17 @@
     ErrorLog ${APACHE_LOG_DIR}/kvmdash_error.log
     CustomLog ${APACHE_LOG_DIR}/kvmdash_access.log combined
 
-    # Frontend ZUERST, aber mit Ausnahme für /api und /bundles
+    # Frontend FIRST, but with exception for /api and /bundles
     <Directory /var/www/kvmdash/frontend/dist>
         Options -Indexes +FollowSymLinks
         AllowOverride None
         Require all granted
         
         RewriteEngine On
-        # Wenn Anfrage mit /api oder /bundles beginnt, nicht weiterleiten
+        # If request starts with /api or /bundles, don't redirect
         RewriteCond %{REQUEST_URI} !^/(api|bundles)
         
-        # Wenn Datei nicht existiert, zu index.html weiterleiten
+        # If file doesn't exist, redirect to index.html
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule ^ index.html [L]
     </Directory>
@@ -27,7 +27,7 @@
     # API Platform Assets
     Alias "/bundles" "/var/www/kvmdash/backend/public/bundles"
     
-    # Backend Verzeichnisse
+    # Backend Directories
     <Directory /var/www/kvmdash/backend/public>
         Options FollowSymLinks
         AllowOverride All
